fix, note, npm deps

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,11 +5,11 @@
 }
 
 .reveal section {
-	color: #51646a;
+	color: #DDDDDD;
 }
 
 .reveal section h2{
-	color: #51646a;
+	color: #EEEEEE;
 }
 
 .reveal section img{ 
